@@ -20,6 +20,7 @@ void
 DataReaderListenerImpl::on_requested_deadline_missed(
   DDS::DataReader_ptr /* reader */,
   const DDS::RequestedDeadlineMissedStatus& /* status */)
+ACE_THROW_SPEC((CORBA::SystemException))
 {
 }
 
@@ -27,6 +28,7 @@ void
 DataReaderListenerImpl::on_requested_incompatible_qos(
   DDS::DataReader_ptr /* reader */,
   const DDS::RequestedIncompatibleQosStatus& /* status */)
+ACE_THROW_SPEC((CORBA::SystemException))
 {
 }
 
@@ -34,6 +36,7 @@ void
 DataReaderListenerImpl::on_sample_rejected(
   DDS::DataReader_ptr /* reader */,
   const DDS::SampleRejectedStatus& /* status */)
+ACE_THROW_SPEC((CORBA::SystemException))
 {
 }
 
@@ -41,11 +44,13 @@ void
 DataReaderListenerImpl::on_liveliness_changed(
   DDS::DataReader_ptr /* reader */,
   const DDS::LivelinessChangedStatus& /* status */)
+ACE_THROW_SPEC((CORBA::SystemException))
 {
 }
 
 void
 DataReaderListenerImpl::on_data_available(DDS::DataReader_ptr reader)
+ACE_THROW_SPEC((CORBA::SystemException))
 {
   Messenger::MessageDataReader_var reader_i =
     Messenger::MessageDataReader::_narrow(reader);
@@ -86,6 +91,7 @@ void
 DataReaderListenerImpl::on_subscription_matched(
   DDS::DataReader_ptr /* reader */,
   const DDS::SubscriptionMatchedStatus& /* status */)
+ACE_THROW_SPEC((CORBA::SystemException))
 {
 }
 
@@ -93,5 +99,6 @@ void
 DataReaderListenerImpl::on_sample_lost(
   DDS::DataReader_ptr /* reader */,
   const DDS::SampleLostStatus& /* status */)
+ACE_THROW_SPEC((CORBA::SystemException))
 {
 }
